--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,14 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto); 
+@import url(https://fonts.googleapis.com/css?family=Montserrat);
+
 * {
     margin: 0px;
     padding: 0px;
 }
 
 body {
-    font-family: Garamond, serif;
-    font-size: 12px;
+    font-family: Roboto, Garamond, serif;
+    font-size: 15px;
     background-image: repeating-linear-gradient(
         45deg, #D8D8D8, #D8D8D8 15px, #E0E0E0 15px, #E0E0E0 30px);
 }
@@ -13,13 +16,19 @@ body {
 /*--------------------styling for text----------------------------*/
 
 p {
-    margin-bottom: 0.5em;
-    font-weight: 100;
-    font-size: 12px;
+    margin-bottom: 1.2em;
+    font-weight: 400;
+    font-size: 16px;
+    color: #707070;
+}
+
+.italized {
+    font-style: italic;
 }
 
 h1 {
-    font-size: 40px;
+    font-family: Montserrat, Helvetica, sans-serif;
+    font-size: 23px;
 }
 
 /*-------------------styling for links----------------------------*/
@@ -68,7 +77,7 @@ img.logo {
 }
 
 #wrapper {
-    padding: 20px;
+    padding: 40px;
 }
 
 .form {
@@ -82,9 +91,9 @@ img.logo {
     border-top: 2px;
     border-bottom: 2px;
     text-align: center;
-    font-family: Helvetica, Arial, sans-serif;
-    font-size: 150%;
-    font-weight: 600;
+    font-family: Montserrat, Helvetica, Arial, sans-serif;
+    font-size: 140%;
+    font-weight: 500;
     margin-bottom: 1em;
     padding-top: 0.8em;
     padding-bottom: 1em;
@@ -114,9 +123,9 @@ img.logo {
 #footer {
     background: #9e2d35;
     text-align: right;
-    font-family: Helvetica, Arial, sans-serif;
-    font-size: 120%;
-    font-weight: 600;
+    font-family: Montserrat, Helvetica, Arial, sans-serif;
+    font-size: 110%;
+    font-weight: 500;
     padding-top: 0.8em;
     padding-bottom: 1em;
 }
